// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Info Label Color Flavors 1`] = `
<div
  class="fddocs-container"
>
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-1"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-2"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-3"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-4"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-5"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-6"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-7"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-8"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-9"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-10"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  

</div>
`;

exports[`Storyshots Components/Info Label Info Label with Icon 1`] = `
<div
  class="fddocs-container"
>
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-1 fd-info-label--icon"
  >
    
        
    <i
      class="fd-info-label__icon sap-icon--future"
      role="presentation"
    />
    
        
    <span
      class="fd-info-label__text"
    >
      Info Label
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--accent-color-2 fd-info-label--icon"
  >
    
        
    <i
      class="fd-info-label__icon sap-icon--upload-to-cloud"
      role="presentation"
    />
    
    
  </span>
  

</div>
`;

exports[`Storyshots Components/Info Label Numeric Info Label 1`] = `
<div
  class="fddocs-container"
>
  
    
  <span
    class="fd-info-label fd-info-label--numeric fd-info-label--accent-color-1"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      6
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--numeric fd-info-label--accent-color-2"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      6.2
    </span>
    
    
  </span>
  
    
  <br />
  <br />
  
    
  <span
    class="fd-info-label fd-info-label--numeric fd-info-label--accent-color-3"
  >
    
        
    <span
      class="fd-info-label__text"
    >
      42k
    </span>
    
    
  </span>
  

</div>
`;
